Fixed jumpiness in loading of GCWU intranet menu bar.

--- a/src/theme-gcwu-intranet/sass/includes/_default-desktop-screen.scss
+++ b/src/theme-gcwu-intranet/sass/includes/_default-desktop-screen.scss
@@ -280,6 +280,7 @@
 		}
 		.expandicon {
 			background-image: url(../images/menu-drop-down.png);
+			padding-right: 0.79em;
 		}
 	}
 }
