--- a/src/theme-gcwu-intranet/sass/includes/_default-responsive-768.scss
+++ b/src/theme-gcwu-intranet/sass/includes/_default-responsive-768.scss
@@ -44,12 +44,3 @@
 		@extend %intranet-default-responsive-768-background-none;
 	}
 }
-
-#gcwu-psnb {
-	.wet-boew-menu {
-		.expandicon {
-			margin-right: 5px;
-			padding-right: 10px;
-		}
-	}
-}
